Object Oriented code for less mind fuck

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 </head>
 <body>
+    <script src="../js/collision.js"></script>
+    <script src="../js/keyboardEvents.js"></script>
+    <script src="../js/objectFactory.js"></script>
+    <script src="../js/colors.js"></script>
+    <script src="../js/ball.js"></script>
+    <script src="../js/ring.js"></script>
+    <script src="../js/generator.js"></script>
     <script src="../js/game.js"></script>
 </body>
 </html>
