--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 </head>
 <body>
+    <script src="../js/score.js"></script>
     <script src="../js/collision.js"></script>
     <script src="../js/keyboardEvents.js"></script>
     <script src="../js/objectFactory.js"></script>
