--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+    <style>
+        body {
+            margin: 0; padding: 0; background: #000;
+        }
+        canvas {
+            display: block; margin: 0 auto; background: #fff;
+        }
+    </style>
 </head>
 <body>
     <script src="../js/score.js"></script>
