Game State & Ball Explosion Introduction

--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,8 @@
     </style>
 </head>
 <body>
+    <script src="../js/gameState.js"></script>
+    <script src="../js/explodedBall.js"></script>
     <script src="../js/jsfxr.js"></script>
     <script src="../js/sound.js"></script>
     <script src="../js/score.js"></script>
