Added pixel font and edging game to final point

--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,8 @@
     </style>
 </head>
 <body>
+    <script src="../js/colors.js"></script>
+    <script src="../js/pixelFont.js"></script>
     <script src="../js/gameState.js"></script>
     <script src="../js/explodedBall.js"></script>
     <script src="../js/jsfxr.js"></script>
@@ -35,7 +37,6 @@
     <script src="../js/collision.js"></script>
     <script src="../js/keyboardEvents.js"></script>
     <script src="../js/objectFactory.js"></script>
-    <script src="../js/colors.js"></script>
     <script src="../js/ball.js"></script>
     <script src="../js/ring.js"></script>
     <script src="../js/generator.js"></script>
