Some gulp shulp

--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,7 @@
     </style>
 </head>
 <body>
+    <!--<script src="../dist/all.js"></script>-->
     <script src="../js/colors.js"></script>
     <script src="../js/pixelFont.js"></script>
     <script src="../js/gameState.js"></script>
