--- a/html/index.html
+++ b/html/index.html
@@ -5,24 +5,20 @@
 
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#4C4B63" />
+    <meta name="theme-color" content="#4C4B63" />
+
+    <title>Flappy Ball :: JS13K Game</title>
 
     <style>
         body {
             margin: 0;
             padding: 0;
-            color: white;
-            background: linear-gradient(
-                    to bottom,
-                    #247BA0,
-                    #247BA0 50%,
-                    #70C1B3 50%,
-                    #70C1B3
-            );
-            background-size: 100% 20px;
+            background-color: #00072D;
+            overflow: hidden;
         }
         canvas {
-            display: block; margin: 0 auto; background: #fff;
+            display: block; margin: 0 auto; background: #0E6BA8;
         }
     </style>
 </head>
